--- a/CafeProject/header.css
+++ b/CafeProject/header.css
@@ -8,7 +8,9 @@
     padding: 5px 12px;
     z-index: 1000;
     font-family: Roboto;
-   
+    /* backdrop-filter: blur(20px);
+    width: 100%;
+    position: fixed; */
 }
 
 .left-sec {
@@ -19,6 +21,7 @@
     display: flex;
     flex-direction: row;
     color: #8C827D;
+    font-family: Poppins;
     
 }
 
