--- a/CafeProject/footer.css
+++ b/CafeProject/footer.css
@@ -2,7 +2,7 @@
 .footer {
     display: flex;
     position: relative;
-    bottom: -5000px;
+    bottom: -100%;
     height: 230px;
     justify-content: space-around;
     align-items: center;
