--- a/CafeProject/style.css
+++ b/CafeProject/style.css
@@ -2,22 +2,57 @@
 body {
     margin: 0;
     padding: 0;
-    height: 5000px;
+    /* height: 5000px; */
     background-color: #FFFFFF;
     font-family: Roboto, sans-serif;
 }
 
+.carousel {
+    position: relative;
+    font-family: Poppins;
+}
 
+.carousel img {
+    position: relative;
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 621px;
+}
 
-.content {
+.carousel .carousel-content { 
+    text-align: center;
     position: absolute;
-    top: 30x;
-    left: 5px;
-    right: 5px;
-    bottom: -4500px;
-    background-color: white;
-    border-radius: 3px;
-    height: 3000px;
+    top: 0;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.carousel-content h2 {
+    margin-top: 130px;
+    color: #F7EBE1;
+    font-size: 68px;
+    margin-bottom: 51px;  
+    font-weight: 500; 
+}
+
+.carousel-content p {
+    color: #F7EBE1;
+    font-size: 16px;
+    margin-bottom: 75px;
+    padding: 0 16%;
+}
+
+.carousel button{
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: 600;
+    height: 51px;
+    width: 180px;
+    border: none;
+    color: #383838;
+    background-color: #F7EBE1;
 }
 
 .location-content {
