--- a/CafeProject/footer.css
+++ b/CafeProject/footer.css
@@ -8,7 +8,7 @@
     align-items: center;
     padding: 70px 0 30px 0;
     z-index: 500;
-    background-color: #F7EBE1;
+    background-color: #ffffff;
 }
 
 .link-column {
